# murmel

./: Cargo.toml  README.md
sample_scripts/: main.ts  murmel-std.ts  stdlib.ts  tsconfig.json
sample_scripts/tonal/: tonal.d.ts  tonal.js
samples/: test.js  test.ts
src/: crossterm_raw_logger.rs  event.rs  event_coordinator.rs  event_generator.rs  event_generator_thread.rs  event_stream.rs  event_thread.rs  main.rs  multichannel.rs  note.rs  note_generator.rs  player.rs  ts_module_loader.rs
