[package]
name = "murmel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.8.0"
deno_core = "0.153.0"
serde = { version = "1.0", features = ["derive"] }
spin_sleep = "1.1.1"
thread-priority = "0.9.2"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9.0"