[package]
name = "murmel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.8.0"
deno_core = "0.153.0"
serde = { version = "1.0", features = ["derive"] }
spin_sleep = "1.1.1"
thread-priority = "0.9.2"
anyhow = "1.0"
log = { version = "0.4.0", features = ["std"] }
crossbeam = "0.8.2"
tokio = { version = "1", features = ["full"] }
notify = "5.0.0"
crossterm = "0.25.0"
deno_ast = { version = "0.19.0", features = ["transpiling"] }